--- a/mail/css/mail.css
+++ b/mail/css/mail.css
@@ -43,9 +43,11 @@ button.control { float: left; margin: 0.2em 0 0 1em; height: 2.4em; width: 2.4em
     height:7em;
 }
 
+.mail_message_summary {}
 
-#mail_messages>li { border-bottom:1px solid black; }
-#mail_messages>li:last { border-bottom:none; }
+#mail_messages>tbody>tr>td { border-bottom:1px solid black; }
+#mail_messages>tbody>tr>td:last { border-bottom:none; }
 
-.mail_message_summary_info { white-space:nowrap; overflow: hidden; }
-.mail_message_summary_subject { white-space:nowrap; overflow:hidden; }
+.mail_message_summary_info { white-space:nowrap; overflow: hidden; padding-left: 5px; }
+.mail_message_summary_subject { white-space:nowrap; overflow:hidden; padding-left: 5px; }
+.mail_message_summary_date { padding-left: 5px; }
