--- a/tasks/css/style.css
+++ b/tasks/css/style.css
@@ -8,15 +8,15 @@
 #tasks_lists div{position:relative;padding:0.5em 1em;}
 #tasks_lists .active{font-weight:bold;}
 #tasks_list h1{background-color:#1D2D44;color:white;font-size:120%;padding:0 0.5em;}
+#task_template { display:none; }
 
 .task{border-radius:0.4em;position:relative;padding:0.4em 1em;}
 .task:nth-child(odd){background-color:#F4F4F4;}
 .task:hover {background-color:#DDDDDD;}
 
-.task_actions{display:none;position:absolute;left:30em;top:0.2em;}
+.task_actions{display:none; margin: 0 0.4em; }
 .task:hover .task_actions {display:block}
-.task_actions img{vertical-align:middle;}
-.task_actions span{cursor:pointer;}
+.task_actions img:hover {cursor:pointer;}
 
 .task .priority{background-color:black;color:white;position:absolute;top:0.5em}
 .task .priority-n{height:2.66ex;width:0.6em;}
@@ -32,7 +32,7 @@
 
 .task .completed {position:absolute;left:3em;top:0.3em;}
 
-.task .summary{padding-left:4em;height:2em;}
+.task .summary{ padding-left:0.5em; height:2em; font-weight:bold; }
 .task .summary input{position:absolute;left:5em;top:0;}
 .task.done .summary{text-decoration:line-through;}
 
@@ -42,7 +42,7 @@
 .task:hover .tag{opacity:0.5}
 .task:hover .tag:hover{opacity:0.8;}
 
-.task .categories{position:absolute;right:12em;text-align:right;top:0.5em}
+.task .categories{position:absolute;right:20em;text-align:right;top:0.5em}
 .task .categories a{background-color:#1d2d44;color:white;}
 .task .categories .tag.active{display:none;}
 .task input.categories{display:none;top:0;text-align:left;}
@@ -50,13 +50,10 @@
 .task .location{background-color:#442d44;color:white;position:absolute;right:0.6em;width:9.2em;text-align:left;top:0.5em}
 .task input.location{display:none;top:0;text-align:left;right:0.3em;background-color:white;color:#333333;}
 
-.task .more{display:none;margin-top:0.5em;}
-.task_less{display:none;}
-
 .task .description{position:relative;left:4em;}
 .task textarea.description{width:35em;height:4em;}
 .task .due{position:absolute;right:0.3em;}
 .task .due .date{width:6em;}
 .task .due .time{width:6em;}
 
-.task_delete{position:absolute;bottom:2px;right:5px}
+/* .task_delete{position:absolute;bottom:2px;right:5px} */
