--- a/tasks/css/style.css
+++ b/tasks/css/style.css
@@ -8,10 +8,10 @@
 #sortby { position:absolute; right:15em; }
 #tasks_lists div{position:relative;padding:0.5em 1em;}
 #tasks_lists .active{font-weight:bold;}
-#tasks_list h1{background-color:#1D2D44;color:white;font-size:120%;padding:0 0.5em;}
+#tasks_list { width:100%; }
 #task_template { display:none; }
+.task { height:3em; }
 
-.task{border-radius:0.4em;position:relative;padding:0.4em 1em; width: 100%; word-break: break-all; box-sizing: border-box; -moz-box-sizing: border-box;}
 .task:nth-child(odd){background-color:#F4F4F4;}
 .task:hover {background-color:#DDDDDD; padding-right: 8em;}
 
@@ -31,11 +31,14 @@
 .task .priority-8{background:rgb(64,255,0);color:black;}
 .task .priority-9{background:rgb(0,255,0);color:black;}
 
-.task .completed {position:absolute;left:3em;top:0.3em;}
+.task .completed { width:1em; padding-left:0.5em; }
 
-.task .summary{ padding-left:0.5em; height:2em; font-weight:bold; }
+.task .summary{ width:5%; padding-left:0.5em; height:2em; font-weight:bold; }
 .task .summary input{position:absolute;left:5em;top:0;}
 .task.done .summary{text-decoration:line-through;}
+
+.task .description { width:5%; } 
+.task textarea.description{width:35em;height:4em;}
 
 .task .tag{border-radius:0.4em;display:inline-block;opacity:0.2;margin:0 0.2em;border:1px solid transparent;padding:0 0.4em;cursor:pointer;}
 .task .tag.active{border-color:black;opacity:0.6;}
@@ -43,7 +46,6 @@
 .task:hover .tag{opacity:0.5}
 .task:hover .tag:hover{opacity:0.8;}
 
-.task .categories{position:absolute;right:20em;text-align:right;top:0.5em}
 .task .categories a{background-color:#1d2d44;color:white;}
 .task .categories .tag.active{display:none;}
 .task input.categories{display:none;top:0;text-align:left;}
@@ -51,8 +53,7 @@
 .task .location{background-color:#442d44;color:white;position:absolute;right:0.6em;width:9.2em;text-align:left;top:0.5em}
 .task input.location{display:none;top:0;text-align:left;right:0.3em;background-color:white;color:#333333;}
 
-.task .description{position:relative;left:4em;}
-.task textarea.description{width:35em;height:4em;}
+
 .task .due{position:absolute;right:0.3em;}
 .task .due .date{width:6em;}
 .task .due .time{width:6em;}
