--- a/tasks/css/style.css
+++ b/tasks/css/style.css
@@ -8,14 +8,16 @@
 #sortby { position:absolute; right:15em; }
 #tasks_lists div{position:relative;padding:0.5em 1em;}
 #tasks_lists .active{font-weight:bold;}
-#tasks_list { width:100%; }
+#tasks_list { width:78%; }
 #task_template { display:none; }
 .task { height:3em; }
+.done { opacity:0.5; }
 
 .task:nth-child(odd){background-color:#F4F4F4;}
 .task:hover {background-color:#DDDDDD; padding-right: 8em;}
 
-.task_actions{display:none; margin: 0 0.4em; position: absolute; top: 0; right: 0; bottom: 0; padding-top: .4em; }
+.task_actions{ display:none; margin: 0 0.4em; position: absolute; top:0.8em; right:1em; bottom: 0; }
+.task_edit { padding-right:1em; }
 .task:hover .task_actions {display:block}
 .task_actions img:hover {cursor:pointer;}
 
@@ -46,6 +48,7 @@
 .task:hover .tag{opacity:0.5}
 .task:hover .tag:hover{opacity:0.8;}
 
+.task .categories { }
 .task .categories a{background-color:#1d2d44;color:white;}
 .task .categories .tag.active{display:none;}
 .task input.categories{display:none;top:0;text-align:left;}
