--- a/tasks/css/style.css
+++ b/tasks/css/style.css
@@ -1,4 +1,4 @@
-#tasks_list p.loading{margin:15px;}
+#rightcontent p.loading{margin:15px;}
 #tasks_lists .done{color:#C7C7C7;}
 #task_details{position:absolute;left:63em;top:6.4em;}
 #task_details th{padding:2px;text-align:right;vertical-align:top; }
@@ -8,17 +8,17 @@
 #sortby { position:absolute; right:15em; }
 #tasks_lists div{position:relative;padding:0.5em 1em;}
 #tasks_lists .active{font-weight:bold;}
-#tasks_list { width:78%; }
+#tasks_list { width: 100%;}
 #task_template { display:none; }
-.task { height:3em; }
+.task { height:3em; position: relative;}
 .done { opacity:0.5; }
 
 .task:nth-child(odd){background-color:#F4F4F4;}
 .task:hover {background-color:#DDDDDD; padding-right: 8em;}
 
-.task_actions{ display:none; margin: 0 0.4em; position: absolute; top:0.8em; right:1em; bottom: 0; }
+.task_actions{ display:none; line-height: 3em;}
 .task_edit { padding-right:1em; }
-.task:hover .task_actions {display:block}
+.task:hover > .task_actions {display:block}
 .task_actions img:hover {cursor:pointer;}
 
 .task .priority{background-color:black;color:white;position:absolute;top:0.5em}
@@ -39,7 +39,7 @@
 .task .summary input{position:absolute;left:5em;top:0;}
 .task.done .summary{text-decoration:line-through;}
 
-.task .description { width:5%; } 
+.task .description { width: auto; } 
 .task textarea.description{width:35em;height:4em;}
 
 .task .tag{border-radius:0.4em;display:inline-block;opacity:0.2;margin:0 0.2em;border:1px solid transparent;padding:0 0.4em;cursor:pointer;}
