--- a/tasks/css/style.css
+++ b/tasks/css/style.css
@@ -14,11 +14,14 @@
 .done { opacity:0.5; }
 
 .task:nth-child(odd){background-color:#F4F4F4;}
-.task:hover {background-color:#DDDDDD; padding-right: 8em;}
+.task:hover {background-color:#DDDDDD;}
+.task:hover .task_actions button { display: block; }
 
-.task_actions{ display:none; }
-.task_edit { padding-right:1em; }
-.task:hover .task_actions {display:block }
+.task_actions {width: 3em; padding: 0 .5em 0 0;}
+.task_actions button {display: none;}
+.task_actions button { background-repeat: no-repeat; background-size: 16px 16px; height: 2.3em; width: 2.3em; background-position: center; vertical-align: bottom;}
+.task_edit button { padding-right:1em; background-image: url('%webroot%/core/img/actions/rename.svg'); }
+.task_edit_due button { padding-right:1em; background-image: url('%appswebroot%/calendar/img/icon.svg');  }
 .task_actions img{ vertical-align:middle; }
 .task_actions img:hover {cursor:pointer;}
 
@@ -40,7 +43,7 @@
 .task .summary input{position:absolute;left:5em;top:0;}
 .task.done .summary{text-decoration:line-through;}
 
-.task .description { padding-left:0.5em; } 
+.task .description { padding-left:0.5em; display: block; } 
 .task textarea.description{width:35em;height:4em;}
 
 .task .tag{border-radius:0.4em;display:inline-block;opacity:0.2;margin:0 0.2em;border:1px solid transparent;padding:0 0.4em;cursor:pointer;}
