--- a/gallery/css/styles.css
+++ b/gallery/css/styles.css
@@ -5,6 +5,9 @@
 
 #gallery > a.album {
     width: 200px;
+    background-color: #ddd;
+    border-radius: 10px;
+    box-shadow: 0 1px 0 white, inset 0 1px 0 #777;
 }
 
 #gallery > a {
